# MegaFon_HACKATON

./: CMakeLists.txt  main.cpp
entity/: Book.cpp  Book.h  InputHandler.cpp  InputHandler.h  Library.cpp  Library.h  Reader.cpp  Reader.h
